k8s/sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: sample-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
